# Explorer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/wokflows/: code-cleanup.yml
.github/workflows/: code-cleanup.yml  main.yml
Explorer/: main.py
Explorer/audionav_shortlister/: shortlister.py  ui_models_distributed.py
Explorer/db/: mongo_db.py  mongo_db_types.py
Explorer/input_recorder/: recorder.py
Explorer/io/: controller.py  io_state.py  key_map.py  recorder.py  scanner.py  scrapper.py  selenium_scanner.py  selenium_scanner_offset_adjusted.py  snapshot_grabber.py
Explorer/objectives/: objective_1.py
Explorer/ocr/: ocr.py
Explorer/overlay/: shortlister.py  transparent_overlay.py  ui_models_distributed.py  ui_models_extra_multihead.py
Explorer/speech/: speech2text.py
Explorer/tf_idf/: filters.py  tf_idf.py  tokenizer.py  types.py
Explorer/trace_processing/: trace_processor.py  traversal_application.py
Explorer/trace_similarity/: action_matching.py  embedding_exploration.py  screen_similarity.py  screensimilarity_model_CenterFPN.py  trace_similarity.py
GUI_Dataset/WebUI/: analysis.py
Identify-Interactable/screenrecognition/: job_web7kbal_big_distr.sh  job_web7kbal_vins_big_distr.sh  ui_dataset_khan.py  ui_train_finetune_web7kbal-vins_distributed.py  ui_train_web7kbal_batch.py  ui_train_web7kbal_distributed.py
JADE_test/: hello_world.py  submit.sh
UIUnderstandingModels/: README.md
UIUnderstandingModels/downloads/: README.md
UIUnderstandingModels/metadata/: README.md
UIUnderstandingModels/metadata/screenrecognition/: class_map_wolfram_manual.json  ignore_list.json  test_ids_khan.json  test_ids_spotify.json  test_ids_wikipedia.json  test_ids_wolfram.json  train_ids_khan.json  train_ids_spotify.json  train_ids_wikipedia.json  train_ids_wolfram.json  val_ids_khan.json  val_ids_spotify.json  val_ids_wikipedia.json  val_ids_wolfram.json
UIUnderstandingModels/metadata/screensim/: domain_map.json  domain_map_raw.json  domain_map_spotify.json  test_split_khan_screensim.json  test_split_spotify_screensim.json  train_split_khan_screensim.json  train_split_spotify_screensim.json  val_split_khan_screensim.json  val_split_spotify_screensim.json  visited_list.csv
UIUnderstandingModels/models_Khan/: README.md  models_khan.md
UIUnderstandingModels/models_Khan/screenrecognition/: encoder_exploration.py  job_Khan.sh  job_dataload_test.sh  job_encoding.sh  job_test.sh  test_script.py  ui_dataset_khan.py  ui_models_distributed.py  ui_train_finetune_khan.py  ui_train_khan.py  ui_train_khanres.py  ui_train_khansize.py
UIUnderstandingModels/models_Khan/screensim/: embedding_exploration.py  job_Khan_NoOCR_LinearBase.sh  job_Khan_NoOCR_NoIN.sh  job_Khan_NoOCR_NoReLU.sh  job_Khan_NoOCR_plus_center.sh  job_Khan_NoOCR_resnet.sh  (+15 more)
(+1257 files in other folders)
