[tool.poetry]
name = "explorer"
version = "0.1.0"
description = "GUI Automation using state of the art ML models"
authors = ["ArnasVysniauskas <81956480+ArnasVysniauskas@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
pyproject-flake8 = "^6.1.0"
mypy = "^1.7.0"
click = "^8.1.7"
types-pynput = "^1.7.5.7"
pynput = "^1.7.6"
numpy = "^1.26.2"
pandas = "^2.1.3"
pandas-stubs = "^2.1.1.230928"
pillow = "^10.1.0"
igraph = "^0.11.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
selenium = "^4.17.2"
pymongo = {extras = ["srv"], version = "^4.6.2"}
dacite = "^1.8.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
easyocr = "^1.7.1"
nltk = "^3.8.1"
sentence-transformers = "2.3.1"
imagehash = "^4.3.1"
mss = "^9.0.1"
seaborn = "^0.13.2"
pyspellchecker = "^0.8.1"
pyqt5 = "^5.15.10"
mean-average-precision = "^2024.1.5.0"
pytorch-lightning = "1.9"
gdown = "^5.1.0"
speechrecognition = "^3.10.1"
pyaudio = "^0.2.14"
soundfile = "^0.12.1"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name="explorer-conda"